[gd_scene load_steps=3 format=3 uid="uid://csa3mlmo20q7i"]

[ext_resource type="Script" path="res://ui/upgrade_option.gd" id="1_8dtuq"]
[ext_resource type="Resource" uid="uid://bovsiny1mg6gj" path="res://upgrades/NullUpgrade.tres" id="2_lfok1"]

[node name="UpgradeOption" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8dtuq")
base_null_upgrade = ExtResource("2_lfok1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -96.0
offset_right = 96.5
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="UpgradeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade Label"

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stats Label"

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Desc Label"

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Purchase Button"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PurchaseButton" to="." method="_on_purchase_button_pressed"]
